# cobol-sequential

./: .markdownlint-cli2.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  usage_question.yaml
.github/workflows/: markdown_linter.yml  rust_build.yml
docs/decisions/: 0000-use-markdown-architectural-decision-records.md  0001-choose-memory-format.md  0002-choose-core-language.md  0003-choose-copybook-parser.md  index.md  template.md
docs/file-format/: README.md  discovery.md
rust/: .gitignore  Cargo.toml  README.md
rust/copybook-reader/: Cargo.toml
rust/copybook-reader/src/: copybook.rs  copybook_grammar.pest  lib.rs  parse_errors.rs  rule_parser.rs
rust/copybook-reader/src/copybook/: copybook_definition.rs  data_type.rs  field_definition.rs  group_definition.rs  mod.rs  statement_definition.rs
rust/copybook-reader/tests/: integration_test.rs
rust/copybook-reader/tests/resources/copybooks/: complex.cpy  line_numbers.cpy  one_field.cpy  one_group_field.cpy  program.cbl  types.cpy
